--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-pyrogram==1.4.16
+pyrogram==2.0.38
 tgcrypto
-yt-dlp
+lyricsgenius
+yt-dlp 
 python-dotenv
 requests
 asgiref
@@ -8,10 +9,19 @@ deezer-python
 spotipy
 psutil
 youtube-dl
-python-arq
 aiohttp
-eyed3
-lyricsgenius
+aiofiles
+apscheduler
+mutagen
+pymongo[srv]==3.12.3
+bs4
+motor==2.5.1
+Shazamio
+youtube_search
+youtube-search-python
+Pillow
+wget
+youtube-search-python
 flask==2.2.2
 gunicorn==20.1.0
 aiohttp==3.8.1
