--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,6 @@
 pyrogram==2.0.38
 tgcrypto
-lyricsgenius
-yt-dlp 
+yt-dlp
 python-dotenv
 requests
 asgiref
@@ -9,20 +8,10 @@ deezer-python
 spotipy
 psutil
 youtube-dl
-aiohttp
-aiofiles
-apscheduler
-mutagen
 python-arq
-pymongo[srv]==3.12.3
-bs4
-motor==2.5.1
-Shazamio
-youtube_search
-youtube-search-python
-Pillow
-wget
-youtube-search-python
+aiohttp
+eyed3
+lyricsgenius
 flask==2.2.2
 gunicorn==20.1.0
 aiohttp==3.8.1
